// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CardTile default 1`] = `
<div
  className="card"
>
  <div
    className="card-image"
  >
    <figure
      className="image is-16by9"
    >
      <img
        alt=""
        src="http://placekitten.com/1080/540"
      />
    </figure>
  </div>
  <div
    className="card-content"
  >
    <div
      className="media"
    >
      <div
        className="media-content"
      >
        <p
          className="title is-6"
        >
          Sweetwater
           
          <span
            className="asteriks"
          >
             * 
          </span>
        </p>
        <p
          className="subtitle is-6"
        >
          <span
            className="spot-water"
          >
            Sweet
          </span>
          ;
        </p>
      </div>
    </div>
    <div
      className="content"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
      <br />
    </div>
  </div>
  <footer
    className="card-footer"
  >
    <a
      className="card-footer-item"
      href="/badestellen/1"
      onClick={[Function]}
    >
      Detail
    </a>
  </footer>
</div>
`;

exports[`Storyshots SpotEditor default 1`] = `
<div>
  <div>
    <div
      className=""
    >
      <div
        className="field is-grouped is-grouped-left"
      >
        <p
          className="control"
        >
          <button
            className="button is-primary"
            disabled={false}
            onClick={[Function]}
            type="submit"
          >
            Speichern
          </button>
        </p>
        <p
          className="control"
        >
          <button
            className="button is-is-light"
            data-testid="handle-edit-mode-button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            Abbrechen
          </button>
        </p>
      </div>
      <form
        onReset={[Function]}
        onSubmit={[Function]}
        style={
          Object {
            "paddingTop": "10px",
          }
        }
      >
        <div
          className="box"
        >
          <fieldset>
            <legend
              className="title is-5"
            >
              Geo Daten
            </legend>
            <div
              className="buttons"
            >
              <button
                className="button is-small is-badge-small "
                data-testid="map-toolbar-i-button"
                id="info"
                onClick={[Function]}
              >
                <span
                  className="icon is-small"
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-info fa-w-6 "
                    data-icon="info"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    style={Object {}}
                    viewBox="0 0 192 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 424.229h20V279.771H20c-11.046 0-20-8.954-20-20V212c0-11.046 8.954-20 20-20h112c11.046 0 20 8.954 20 20v212.229h20c11.046 0 20 8.954 20 20V492c0 11.046-8.954 20-20 20H20c-11.046 0-20-8.954-20-20v-47.771c0-11.046 8.954-20 20-20zM96 0C56.235 0 24 32.235 24 72s32.235 72 72 72 72-32.235 72-72S135.764 0 96 0z"
                      fill="currentColor"
                      style={Object {}}
                    />
                  </svg>
                </span>
              </button>
              <button
                className="button is-small is-badge-small "
                data-testid="map-toolbar-i-button"
                id="area"
                onClick={[Function]}
              >
                <span
                  className="icon is-small"
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-draw-polygon fa-w-14 "
                    data-icon="draw-polygon"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    style={Object {}}
                    viewBox="0 0 448 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M384 352c-.35 0-.67.1-1.02.1l-39.2-65.32c5.07-9.17 8.22-19.56 8.22-30.78s-3.14-21.61-8.22-30.78l39.2-65.32c.35.01.67.1 1.02.1 35.35 0 64-28.65 64-64s-28.65-64-64-64c-23.63 0-44.04 12.95-55.12 32H119.12C108.04 44.95 87.63 32 64 32 28.65 32 0 60.65 0 96c0 23.63 12.95 44.04 32 55.12v209.75C12.95 371.96 0 392.37 0 416c0 35.35 28.65 64 64 64 23.63 0 44.04-12.95 55.12-32h209.75c11.09 19.05 31.49 32 55.12 32 35.35 0 64-28.65 64-64 .01-35.35-28.64-64-63.99-64zm-288 8.88V151.12A63.825 63.825 0 0 0 119.12 128h208.36l-38.46 64.1c-.35-.01-.67-.1-1.02-.1-35.35 0-64 28.65-64 64s28.65 64 64 64c.35 0 .67-.1 1.02-.1l38.46 64.1H119.12A63.748 63.748 0 0 0 96 360.88zM272 256c0-8.82 7.18-16 16-16s16 7.18 16 16-7.18 16-16 16-16-7.18-16-16zM400 96c0 8.82-7.18 16-16 16s-16-7.18-16-16 7.18-16 16-16 16 7.18 16 16zM64 80c8.82 0 16 7.18 16 16s-7.18 16-16 16-16-7.18-16-16 7.18-16 16-16zM48 416c0-8.82 7.18-16 16-16s16 7.18 16 16-7.18 16-16 16-16-7.18-16-16zm336 16c-8.82 0-16-7.18-16-16s7.18-16 16-16 16 7.18 16 16-7.18 16-16 16z"
                      fill="currentColor"
                      style={Object {}}
                    />
                  </svg>
                </span>
              </button>
              <button
                className="button is-small is-badge-small "
                data-testid="map-toolbar-i-button"
                id="location"
                onClick={[Function]}
              >
                <span
                  className="icon is-small"
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-map-marker fa-w-12 "
                    data-icon="map-marker"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    style={Object {}}
                    viewBox="0 0 384 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0z"
                      fill="currentColor"
                      style={Object {}}
                    />
                  </svg>
                </span>
              </button>
              <div
                className="dropdown  is-small"
              >
                <div
                  aria-controls="dropdown-menu"
                  aria-haspopup="true"
                  className="dropdown-trigger"
                >
                  <button
                    aria-controls="dropdown-menu"
                    aria-haspopup="true"
                    className="button is-small"
                    onClick={[Function]}
                  >
                    <span
                      style={
                        Object {
                          "paddingRight": "0.5em",
                        }
                      }
                    >
                      Bearbeitungs Modus:  Anzeige
                    </span>
                    <span>
                      <svg
                        aria-hidden="true"
                        className="svg-inline--fa fa-angle-down fa-w-10 "
                        data-icon="angle-down"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        style={Object {}}
                        viewBox="0 0 320 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                          fill="currentColor"
                          style={Object {}}
                        />
                      </svg>
                    </span>
                  </button>
                </div>
                <div
                  className="dropdown-menu"
                  id="dropdown-menu"
                  role="menu"
                >
                  <div
                    className="dropdown-content"
                  >
                    <a
                      className="dropdown-item is-active"
                      href="#/"
                      id="view"
                      onClick={[Function]}
                    >
                      anzeigen
                    </a>
                    <a
                      className="dropdown-item "
                      href="#/"
                      id="modify"
                      onClick={[Function]}
                    >
                      modifizieren
                    </a>
                    <a
                      className="dropdown-item "
                      href="#/"
                      id="translate"
                      onClick={[Function]}
                    >
                      bewegen
                    </a>
                  </div>
                </div>
              </div>
            </div>
            <div
              id="map__container"
            >
              <div
                id="deckgl-wrapper"
              >
                <canvas
                  id="deckgl-overlay"
                  style={
                    Object {
                      "left": 0,
                      "position": "absolute",
                      "top": 0,
                    }
                  }
                />
              </div>
            </div>
          </fieldset>
        </div>
        <div
          className="box"
        >
          <fieldset>
            <legend
              className="title is-5"
            >
              Basis Daten
            </legend>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="name"
                >
                  Name
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className="input"
                      data-testid="test-input-name"
                      id="name"
                      name="name"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                      value="foo"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="nameLong"
                >
                  Langer Name
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className="input"
                      data-testid="test-input-nameLong"
                      id="nameLong"
                      name="nameLong"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="water"
                >
                  Gewässer
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className="input"
                      data-testid="test-input-water"
                      id="water"
                      name="water"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="district"
                >
                  Distrikt
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className="input"
                      data-testid="test-input-district"
                      id="district"
                      name="district"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="street"
                >
                  Straße
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className="input"
                      data-testid="test-input-street"
                      id="street"
                      name="street"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="postalCode"
                >
                  Postleitzahl
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className="input"
                      data-testid="test-input-postalCode"
                      id="postalCode"
                      name="postalCode"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="number"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="city"
                >
                  Stadt
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className="input"
                      data-testid="test-input-city"
                      id="city"
                      name="city"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="website"
                >
                  Website URL
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className="input"
                      data-testid="test-input-website"
                      id="website"
                      name="website"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="lastClassification"
                >
                  Letzte Klassifizierung
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className="input"
                      data-testid="test-input-lastClassification"
                      id="lastClassification"
                      name="lastClassification"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="image"
                >
                  Bild URL
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className="input"
                      data-testid="test-input-image"
                      id="image"
                      name="image"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="latitude"
                >
                  Latitude
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className="input"
                      data-testid="test-input-latitude"
                      id="latitude"
                      name="latitude"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="number"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="longitude"
                >
                  Longitude
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className="input"
                      data-testid="test-input-longitude"
                      id="longitude"
                      name="longitude"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="number"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="elevation"
                >
                  Höhe über NN
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className="input"
                      data-testid="test-input-elevation"
                      id="elevation"
                      name="elevation"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="number"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="apiEndpoints"
                >
                  API Endpoints
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className="input"
                      data-testid="test-input-apiEndpoints"
                      id="apiEndpoints"
                      name="apiEndpoints"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="cyanoPossible"
                    >
                      <input
                        id="cyanoPossible"
                        name="cyanoPossible"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Cyanobakterien möglich
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="isPublic"
                    >
                      <input
                        checked={true}
                        id="isPublic"
                        name="isPublic"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                        value={true}
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Öffentlich einsehbar
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </fieldset>
        </div>
        <div
          className="box"
        >
          <fieldset>
            <legend
              className="title is-5"
            >
              Messwerte
            </legend>
            <div
              className="file has-name is-right"
            >
              <label
                className="file-label"
                htmlFor="csvFile"
              >
                <input
                  className="file-input"
                  disabled={false}
                  name="csvFile"
                  onChange={[Function]}
                  type="file"
                />
                <span
                  className="file-cta"
                >
                  <span
                    className="file-icon"
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-file-csv fa-w-12 "
                      data-icon="file-csv"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 384 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm-96 144c0 4.42-3.58 8-8 8h-8c-8.84 0-16 7.16-16 16v32c0 8.84 7.16 16 16 16h8c4.42 0 8 3.58 8 8v16c0 4.42-3.58 8-8 8h-8c-26.51 0-48-21.49-48-48v-32c0-26.51 21.49-48 48-48h8c4.42 0 8 3.58 8 8v16zm44.27 104H160c-4.42 0-8-3.58-8-8v-16c0-4.42 3.58-8 8-8h12.27c5.95 0 10.41-3.5 10.41-6.62 0-1.3-.75-2.66-2.12-3.84l-21.89-18.77c-8.47-7.22-13.33-17.48-13.33-28.14 0-21.3 19.02-38.62 42.41-38.62H200c4.42 0 8 3.58 8 8v16c0 4.42-3.58 8-8 8h-12.27c-5.95 0-10.41 3.5-10.41 6.62 0 1.3.75 2.66 2.12 3.84l21.89 18.77c8.47 7.22 13.33 17.48 13.33 28.14.01 21.29-19 38.62-42.39 38.62zM256 264v20.8c0 20.27 5.7 40.17 16 56.88 10.3-16.7 16-36.61 16-56.88V264c0-4.42 3.58-8 8-8h16c4.42 0 8 3.58 8 8v20.8c0 35.48-12.88 68.89-36.28 94.09-3.02 3.25-7.27 5.11-11.72 5.11s-8.7-1.86-11.72-5.11c-23.4-25.2-36.28-58.61-36.28-94.09V264c0-4.42 3.58-8 8-8h16c4.42 0 8 3.58 8 8zm121-159L279.1 7c-4.5-4.5-10.6-7-17-7H256v128h128v-6.1c0-6.3-2.5-12.4-7-16.9z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                  </span>
                  <span
                    className="file-label"
                  >
                    Datei auswählen…
                  </span>
                </span>
                <span
                  className="file-name"
                >
                  Messwerte CSV
                </span>
              </label>
            </div>
          </fieldset>
        </div>
        <div
          className="box"
        >
          <fieldset>
            <legend
              className="title is-5"
            >
              Bilder
            </legend>
          </fieldset>
        </div>
        <div
          className="box"
        >
          <fieldset>
            <legend
              className="title is-5"
            >
              Hygienische Beeinträchtigung durch:
            </legend>
            <div
              className="field"
            >
              <label
                className="label"
                htmlFor="influencePurificationPlant"
              >
                kommunale Klärwerke
              </label>
              <div
                className="control"
              >
                <div
                  className="select"
                >
                  <select
                    id="influencePurificationPlant"
                    name="influencePurificationPlant"
                    onBlur={[Function]}
                    onChange={[Function]}
                  >
                    <option
                      value="yes"
                    >
                      Ja
                    </option>
                    <option
                      value="unknown"
                    >
                      Unbekannt
                    </option>
                    <option
                      value="no"
                    >
                      Nein
                    </option>
                  </select>
                </div>
              </div>
            </div>
            <div
              className="field"
            >
              <label
                className="label"
                htmlFor="influenceCombinedSewerSystem"
              >
                Mischwassereinleitungen aus urbanen Gebieten
              </label>
              <div
                className="control"
              >
                <div
                  className="select"
                >
                  <select
                    id="influenceCombinedSewerSystem"
                    name="influenceCombinedSewerSystem"
                    onBlur={[Function]}
                    onChange={[Function]}
                  >
                    <option
                      value="yes"
                    >
                      Ja
                    </option>
                    <option
                      value="unknown"
                    >
                      Unbekannt
                    </option>
                    <option
                      value="no"
                    >
                      Nein
                    </option>
                  </select>
                </div>
              </div>
            </div>
            <div
              className="field"
            >
              <label
                className="label"
                htmlFor="influenceRainwater"
              >
                Regenwassereileitung aus urbanen Gebieten
              </label>
              <div
                className="control"
              >
                <div
                  className="select"
                >
                  <select
                    id="influenceRainwater"
                    name="influenceRainwater"
                    onBlur={[Function]}
                    onChange={[Function]}
                  >
                    <option
                      value="yes"
                    >
                      Ja
                    </option>
                    <option
                      value="unknown"
                    >
                      Unbekannt
                    </option>
                    <option
                      value="no"
                    >
                      Nein
                    </option>
                  </select>
                </div>
              </div>
            </div>
            <div
              className="field"
            >
              <label
                className="label"
                htmlFor="influenceAgriculture"
              >
                Einleitungen aus der Landwirtschaft
              </label>
              <div
                className="control"
              >
                <div
                  className="select"
                >
                  <select
                    id="influenceAgriculture"
                    name="influenceAgriculture"
                    onBlur={[Function]}
                    onChange={[Function]}
                  >
                    <option
                      value="yes"
                    >
                      Ja
                    </option>
                    <option
                      value="unknown"
                    >
                      Unbekannt
                    </option>
                    <option
                      value="no"
                    >
                      Nein
                    </option>
                  </select>
                </div>
              </div>
            </div>
          </fieldset>
        </div>
        <div
          className="box"
        >
          <fieldset>
            <legend
              className="title is-5"
            >
              Zuständiges Gesundheitsamt
            </legend>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="healthDepartment"
                >
                  Name
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className="input"
                      data-testid="test-input-healthDepartment"
                      id="healthDepartment"
                      name="healthDepartment"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="healthDepartmentAddition"
                >
                  Zusatz
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className="input"
                      data-testid="test-input-healthDepartmentAddition"
                      id="healthDepartmentAddition"
                      name="healthDepartmentAddition"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="healthDepartmentStreet"
                >
                  Straße
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className="input"
                      data-testid="test-input-healthDepartmentStreet"
                      id="healthDepartmentStreet"
                      name="healthDepartmentStreet"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="healthDepartmentPostalCode"
                >
                  Postleitzahl
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className="input"
                      data-testid="test-input-healthDepartmentPostalCode"
                      id="healthDepartmentPostalCode"
                      name="healthDepartmentPostalCode"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="number"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="healthDepartmentCity"
                >
                  Stadt
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className="input"
                      data-testid="test-input-healthDepartmentCity"
                      id="healthDepartmentCity"
                      name="healthDepartmentCity"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="healthDepartmentMail"
                >
                  E-Mail
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className="input"
                      data-testid="test-input-healthDepartmentMail"
                      id="healthDepartmentMail"
                      name="healthDepartmentMail"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="email"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="healthDepartmentPhone"
                >
                  Telefonnummer
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className="input"
                      data-testid="test-input-healthDepartmentPhone"
                      id="healthDepartmentPhone"
                      name="healthDepartmentPhone"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
          </fieldset>
        </div>
        <div
          className="box"
        >
          <fieldset>
            <legend
              className="title is-5"
            >
              Zusatz Daten
            </legend>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="waterRescue"
                >
                  Wasserrettung
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className="input"
                      data-testid="test-input-waterRescue"
                      id="waterRescue"
                      name="waterRescue"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="waterRescueThroughDLRGorASB"
                    >
                      <input
                        id="waterRescueThroughDLRGorASB"
                        name="waterRescueThroughDLRGorASB"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Wasserrettung durch DLRG oder ASB?
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="lifeguard"
                    >
                      <input
                        id="lifeguard"
                        name="lifeguard"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Rettungschwimmer vor Ort
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="disabilityAccess"
                    >
                      <input
                        id="disabilityAccess"
                        name="disabilityAccess"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Barrierefreie
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="disabilityAccessBathrooms"
                    >
                      <input
                        id="disabilityAccessBathrooms"
                        name="disabilityAccessBathrooms"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Barrierefreie Waschräume
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="hasDisabilityAccesableEntrence"
                    >
                      <input
                        id="hasDisabilityAccesableEntrence"
                        name="hasDisabilityAccesableEntrence"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Barrierefreier Eingang
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="restaurant"
                    >
                      <input
                        id="restaurant"
                        name="restaurant"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Restaurant
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="snack"
                    >
                      <input
                        id="snack"
                        name="snack"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Snack
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="parkingSpots"
                    >
                      <input
                        id="parkingSpots"
                        name="parkingSpots"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Parkplätze
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="bathrooms"
                    >
                      <input
                        id="bathrooms"
                        name="bathrooms"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Waschräume
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="bathroomsMobile"
                    >
                      <input
                        id="bathroomsMobile"
                        name="bathroomsMobile"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Mobile Toiletten
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="dogban"
                    >
                      <input
                        id="dogban"
                        name="dogban"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Hundeverbot
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </fieldset>
        </div>
        <div
          className="field is-grouped is-grouped-left"
        >
          <p
            className="control"
          >
            <button
              className="button is-primary"
              disabled={false}
              onClick={[Function]}
              type="submit"
            >
              Speichern
            </button>
          </p>
          <p
            className="control"
          >
            <button
              className="button is-is-light"
              data-testid="handle-edit-mode-button"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Abbrechen
            </button>
          </p>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Storyshots SpotEditor/Checkbox default 1`] = `
<div>
  <div
    className="field is-horizontal"
  >
    <div
      className="field-label is-normal"
    >
      <div
        className="label"
      />
    </div>
    <div
      className="field-body"
    >
      <div
        className="field"
      >
        <div
          className="control"
        >
          <label
            className="checkbox"
            htmlFor="name"
          >
            <input
              checked={true}
              id="name"
              name="name"
              onBlur={[Function]}
              onChange={[Function]}
              type="checkbox"
              value="foo"
            />
            <span
              className="form__checkbox--distance"
            >
              The Checkbox
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
  <div
    className="field is-grouped is-grouped-left"
  >
    <p
      className="control"
    >
      <button
        className="button is-primary"
        disabled={false}
        type="submit"
      >
        Speichern
      </button>
    </p>
    <p
      className="control"
    >
      <button
        className="button is-is-light"
        data-testid="handle-edit-mode-button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Abbrechen
      </button>
    </p>
  </div>
</div>
`;

exports[`Storyshots SpotEditor/Input text 1`] = `
<div>
  <div
    className="field is-horizontal"
  >
    <div
      className="field-label is-normal"
    >
      <label
        className="label"
        htmlFor="name"
      >
        The Input
      </label>
    </div>
    <div
      className="field-body"
    >
      <div
        className="field"
      >
        <div
          className="control"
        >
          <input
            className="input"
            data-testid="test-input-name"
            id="name"
            name="name"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="foo"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="field is-grouped is-grouped-left"
  >
    <p
      className="control"
    >
      <button
        className="button is-primary"
        disabled={false}
        type="submit"
      >
        Speichern
      </button>
    </p>
    <p
      className="control"
    >
      <button
        className="button is-is-light"
        data-testid="handle-edit-mode-button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Abbrechen
      </button>
    </p>
  </div>
</div>
`;

exports[`Storyshots SpotEditor/Select default 1`] = `
<div>
  <div
    className="field"
  >
    <label
      className="label"
      htmlFor="name"
    >
      The Checkbox
    </label>
    <div
      className="control"
    >
      <div
        className="select"
      >
        <select
          id="name"
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
          value="yes"
        >
          <option
            value="yes"
          >
            YES
          </option>
          <option
            value="no"
          >
            NO
          </option>
        </select>
      </div>
    </div>
  </div>
  <div
    className="field is-grouped is-grouped-left"
  >
    <p
      className="control"
    >
      <button
        className="button is-primary"
        disabled={false}
        type="submit"
      >
        Speichern
      </button>
    </p>
    <p
      className="control"
    >
      <button
        className="button is-is-light"
        data-testid="handle-edit-mode-button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Abbrechen
      </button>
    </p>
  </div>
</div>
`;
